add new actions to the endpoint
